// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Amount /> should render Amount with default props 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={100}
    fontWeight="regular"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render amount with Decimal value 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={200}
    fontWeight="regular"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    22
  </Text>
</View>
`;

exports[`<Amount /> should render amount with Humanize value 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="surface.text.normal.lowContrast"
      fontSize={200}
      fontWeight="regular"
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Lato",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      1k
    </Text>
  </View>
</View>
`;

exports[`<Amount /> should render body-medium size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={100}
    fontWeight="regular"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render body-medium-bold size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={100}
    fontWeight="bold"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render body-small size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={75}
    fontWeight="regular"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render body-small-bold size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={75}
    fontWeight="bold"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render heading-large size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={100}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={400}
    fontWeight="regular"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={100}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render heading-large-bold size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={100}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={400}
    fontWeight="bold"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={100}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render heading-small size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={200}
    fontWeight="regular"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render heading-small-bold size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={200}
    fontWeight="bold"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render information intent Amount  1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="feedback.text.information.lowContrast"
      fontSize={100}
      fontWeight="regular"
      style={
        Array [
          Object {
            "color": "hsla(193, 100%, 35%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingRight": 4,
        },
      ]
    }
  >
    <Text
      color="feedback.text.information.lowContrast"
      fontSize={100}
      fontWeight="regular"
      style={
        Array [
          Object {
            "color": "hsla(193, 100%, 35%, 1)",
            "fontFamily": "Lato",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      1,000
    </Text>
  </View>
</View>
`;

exports[`<Amount /> should render positive intent Amount  1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="feedback.text.positive.lowContrast"
      fontSize={75}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(160, 100%, 26%, 1)",
            "fontFamily": "Lato",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="feedback.text.positive.lowContrast"
    fontSize={100}
    fontWeight="regular"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(160, 100%, 26%, 1)",
          "fontFamily": "Lato",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="feedback.text.positive.lowContrast"
    fontSize={75}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(160, 100%, 26%, 1)",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render title-medium size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={400}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 20,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={700}
    fontWeight="bold"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={400}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;

exports[`<Amount /> should render title-small size Amount 1`] = `
<View
  alignItems="baseline"
  display="flex"
  style={
    Array [
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "paddingLeft": 4,
        "paddingRight": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontSize={300}
      fontWeight="bold"
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Lato",
            "fontSize": 18,
            "fontStyle": "normal",
            "fontWeight": "700",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      ₹
    </Text>
  </View>
  <Text
    color="surface.text.normal.lowContrast"
    fontSize={600}
    fontWeight="bold"
    paddingRight="spacing.1"
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 22,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    1,000
    .
  </Text>
  <Text
    color="surface.text.muted.lowContrast"
    fontSize={300}
    fontWeight="regular"
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    00
  </Text>
</View>
`;
